--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
       function funThing() {
         const container = document.createElement('div');
-        const numBits = 100;
+        const numBits = 50;
         document.body.appendChild(container);
           
         container.style.position = 'absolute';
@@ -25,7 +25,7 @@
           div.style.height = '5px'
           div.style.width = '5px'
 
-          div.style.top = (window.innerHeight * Math.random()) + 'px';
+          div.style.top = (window.innerHeight * Math.random() - 150) + 'px';
           div.style.left = (window.innerWidth * Math.random()) + 'px';
         }
 
@@ -33,7 +33,7 @@
         const animationTime = 1000;
 
         const totalDisplacementX = 300;
-        const totalDisplacementY = 50;
+        const totalDisplacementY = 20;
 
         const animate = () => {
           const elapsedTime = Date.now() - startTime;
@@ -82,6 +82,7 @@
         if (answer === correct) {
           feedbackEl.innerText = 'Correct!';
           feedbackEl.classList.add('correct');
+          funThing();
           funThing();
         } else {
           feedbackEl.innerText = 'Try Again';
