--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
 
         const totalDisplacementX = 300;
         const totalDisplacementY = 20;
-        const randomSign = Math.random() < 0.5 ? -1 : 1;
+        const randomOffset = Math.random();
 
         const animate = () => {
           const elapsedTime = Date.now() - startTime;
           const progress = elapsedTime / animationTime;
 
           container.style.top = (totalDisplacementX * progress) + 'px';
-          container.style.left = (totalDisplacementY * Math.sin(progress * Math.PI * 2 * randomSign)) + 'px';
+          container.style.left = (totalDisplacementY * Math.sin((progress + randomOffset) * Math.PI * 2)) + 'px';
 
           if (progress < 1) {
             requestAnimationFrame(animate);
