--- a/index.html
+++ b/index.html
@@ -161,6 +161,12 @@
         <button id="new-problem" type="button">new problem</button>
       </form>
 
+      <form id="settings-form">
+        <input type="hidden" name="subtraction.numbers-up-to" value="20">
+        <input type="hidden" name="subtraction.numbers-at-least" value="8">
+        <input type="hidden" name="subtraction.minimum-difference" value="3">
+      </form>
+
     </div>
 
     <script>
