--- a/index.html
+++ b/index.html
@@ -62,7 +62,6 @@
         const settingsFormEl = document.getElementById('settings-form');
         const settings = new FormData(settingsFormEl);
 
-        alert(settings.get('subtraction.max-minuend'))
         const maxMinuend = parseFloat(settings.get('subtraction.max-minuend'), 10);
         const minMinuend = parseFloat(settings.get('subtraction.min-minuend'), 10);
         
@@ -170,8 +169,8 @@
 
       <form id="settings-form">
         <input type="hidden" name="subtraction.max-minuend" value="20">
-        <input type="hidden" name="subtraction.minimum-minuend" value="8">
-        <input type="hidden" name="subtraction.minimum-subtrahend" value="3">
+        <input type="hidden" name="subtraction.min-minuend" value="8">
+        <input type="hidden" name="subtraction.min-subtrahend" value="3">
       </form>
 
     </div>
